--- a/InovaGroups/Base.lproj/Main.storyboard
+++ b/InovaGroups/Base.lproj/Main.storyboard
@@ -1332,10 +1332,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="heg-4g-mqe">
-                                <rect key="frame" x="24" y="187" width="327" height="230"/>
+                                <rect key="frame" x="24" y="247" width="327" height="170"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wrb-eN-KyL">
-                                        <rect key="frame" x="15" y="176.5" width="135" height="35"/>
+                                        <rect key="frame" x="15" y="116.5" width="135" height="35"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="G9V-Tp-Mrb"/>
@@ -1349,14 +1349,14 @@
                                             <action selector="cancel:" destination="KNR-uC-DCr" eventType="touchUpInside" id="EVn-I4-Xwm"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Atencao:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NI3-e8-UG6">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Atenção" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NI3-e8-UG6">
                                         <rect key="frame" x="15" y="20" width="297" height="24"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jnm-Fs-9NJ">
-                                        <rect key="frame" x="177" y="176.5" width="135" height="35"/>
+                                        <rect key="frame" x="177" y="116.5" width="135" height="35"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="GAe-Kh-cwf"/>
@@ -1364,7 +1364,7 @@
                                         </constraints>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                         <state key="normal" title="Confirmar">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="confirm:" destination="KNR-uC-DCr" eventType="touchUpInside" id="bwu-sc-CyV"/>
@@ -1376,37 +1376,20 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Senha:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HO6-ef-MFf">
-                                        <rect key="frame" x="15" y="93.5" width="297" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sZB-X5-3ED">
-                                        <rect key="frame" x="15" y="122.5" width="297" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="NI3-e8-UG6" secondAttribute="trailing" constant="15" id="2CE-MA-Wy7"/>
-                                    <constraint firstAttribute="trailing" secondItem="HO6-ef-MFf" secondAttribute="trailing" constant="15" id="4qm-8e-xmF"/>
                                     <constraint firstItem="NI3-e8-UG6" firstAttribute="top" secondItem="heg-4g-mqe" secondAttribute="top" constant="20" id="6RE-y6-Q5Y"/>
                                     <constraint firstItem="Wrb-eN-KyL" firstAttribute="leading" secondItem="heg-4g-mqe" secondAttribute="leading" constant="15" id="Cgq-kb-lAi"/>
                                     <constraint firstAttribute="trailing" secondItem="42U-ax-Ykz" secondAttribute="trailing" constant="15" id="DGT-gq-Tuf"/>
-                                    <constraint firstItem="HO6-ef-MFf" firstAttribute="leading" secondItem="heg-4g-mqe" secondAttribute="leading" constant="15" id="Ole-yB-Adg"/>
                                     <constraint firstItem="jnm-Fs-9NJ" firstAttribute="centerY" secondItem="Wrb-eN-KyL" secondAttribute="centerY" id="RYy-pi-7NC"/>
                                     <constraint firstAttribute="trailing" secondItem="jnm-Fs-9NJ" secondAttribute="trailing" constant="15" id="Z0B-3L-lMv"/>
-                                    <constraint firstAttribute="height" constant="230" id="hb0-0L-5nt"/>
+                                    <constraint firstAttribute="height" constant="170" id="hb0-0L-5nt"/>
                                     <constraint firstItem="42U-ax-Ykz" firstAttribute="leading" secondItem="heg-4g-mqe" secondAttribute="leading" constant="15" id="iGo-QX-MQP"/>
                                     <constraint firstItem="42U-ax-Ykz" firstAttribute="top" secondItem="NI3-e8-UG6" secondAttribute="bottom" constant="15" id="iNp-X5-YLZ"/>
-                                    <constraint firstItem="sZB-X5-3ED" firstAttribute="leading" secondItem="heg-4g-mqe" secondAttribute="leading" constant="15" id="jEQ-6D-9di"/>
-                                    <constraint firstItem="sZB-X5-3ED" firstAttribute="top" secondItem="HO6-ef-MFf" secondAttribute="bottom" constant="5" id="nc9-YH-wJ8"/>
-                                    <constraint firstAttribute="trailing" secondItem="sZB-X5-3ED" secondAttribute="trailing" constant="15" id="ub2-xK-gVG"/>
-                                    <constraint firstItem="HO6-ef-MFf" firstAttribute="top" secondItem="42U-ax-Ykz" secondAttribute="bottom" constant="15" id="wOK-U0-PmH"/>
+                                    <constraint firstAttribute="bottom" secondItem="Wrb-eN-KyL" secondAttribute="bottom" constant="18.5" id="lxJ-fT-w3S"/>
                                     <constraint firstItem="NI3-e8-UG6" firstAttribute="leading" secondItem="heg-4g-mqe" secondAttribute="leading" constant="15" id="zhy-Uk-8mh"/>
-                                    <constraint firstItem="Wrb-eN-KyL" firstAttribute="top" secondItem="sZB-X5-3ED" secondAttribute="bottom" constant="20" id="zry-MY-b0g"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -1424,9 +1407,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="8Lt-th-ONx"/>
                     <size key="freeformSize" width="375" height="667"/>
-                    <connections>
-                        <outlet property="tfPassword" destination="sZB-X5-3ED" id="mNP-i6-sQS"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aN0-mH-PdG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1434,8 +1414,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Tsf-gQ-r6F"/>
-        <segue reference="bNk-vr-ISh"/>
+        <segue reference="d4H-bl-CQT"/>
+        <segue reference="ZR5-p6-8jl"/>
         <segue reference="6Uj-pB-dgr"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
